# autoware.universe

control/mpc_lateral_controller/: CMakeLists.txt
control/mpc_lateral_controller/include/mpc_lateral_controller/vehicle_model/: vehicle_model_four_wheel_steering_kinematics.hpp  vehicle_model_four_wheel_steering_kinematics_no_delay.hpp
control/mpc_lateral_controller/param/: lateral_controller_defaults.param.yaml
control/mpc_lateral_controller/src/: mpc.cpp  mpc_lateral_controller.cpp
control/mpc_lateral_controller/src/vehicle_model/: vehicle_model_four_wheel_steering_kinematics.cpp
control/pid_longitudinal_controller/src/: pid_longitudinal_controller.cpp
latest/: sitemap.xml
latest/perception/elevation_map_loader/: index.html
launch/tier4_localization_launch/launch/pose_twist_fusion_filter/: pose_twist_fusion_filter.launch.xml
launch/tier4_planning_launch/launch/: planning.launch.xml
launch/tier4_planning_launch/launch/scenario_planning/: parking.launch.py  scenario_planning.launch.xml
localization/ekf_localizer/config/: ekf_localizer.param.yaml
localization/ekf_localizer/include/ekf_localizer/: covariance.hpp  ekf_localizer.hpp  hyper_parameters.hpp  matrix_types.hpp  measurement.hpp  state_index.hpp  state_transition.hpp  warning_message.hpp
localization/ekf_localizer/launch/: ekf_localizer.launch.xml
localization/ekf_localizer/src/: covariance.cpp  ekf_localizer.cpp  measurement.cpp  state_transition.cpp  warning_message.cpp
localization/ekf_localizer/test/: test_covariance.cpp  test_measurement.cpp  test_state_transition.cpp
main/: sitemap.xml
map/map_loader/src/lanelet2_map_loader/: lanelet2_map_visualization_node.cpp
planning/behavior_path_planner/config/avoidance/: avoidance.param.yaml
planning/behavior_path_planner/include/behavior_path_planner/: behavior_path_planner_node.hpp  data_manager.hpp
planning/behavior_path_planner/src/: behavior_path_planner_node.cpp
planning/behavior_path_planner/src/utils/: path_utils.cpp  utils.cpp
planning/coverage_planning/: CMakeLists.txt  package.xml
planning/coverage_planning/include/coverage_planning/: coverage_planning.hpp  coverage_planning_core.hpp
planning/coverage_planning/launch/: coverage_planning.launch
planning/coverage_planning/src/: coverage_planning.cpp  coverage_planning_core.cpp  coverage_planning_node.cpp
planning/coverage_planning/srv/: GetCoverageTrajectory.srv
planning/freespace_planner/: package.xml
planning/freespace_planner/include/freespace_planner/: freespace_planner_node.hpp
planning/freespace_planner/launch/: freespace_planner.launch.xml
planning/freespace_planner/src/freespace_planner/: freespace_planner_node.cpp
planning/freespace_planner_preprocessor/: CMakeLists.txt  package.xml
planning/freespace_planner_preprocessor/config/: freespace_planner_preprocessor.param.yaml
planning/freespace_planner_preprocessor/include/: freespace_planner_preprocessor_node.hpp
planning/freespace_planner_preprocessor/launch/: freespace_planner_preprocessor.launch.xml
planning/freespace_planner_preprocessor/src/: freespace_planner_preprocessor_node.cpp
planning/obstacle_avoidance_planner/: CMakeLists.txt
planning/obstacle_avoidance_planner/config/: obstacle_avoidance_planner.param.yaml
planning/obstacle_avoidance_planner/include/obstacle_avoidance_planner/: debug_marker.hpp  mpt_optimizer.hpp  state_equation_generator.hpp
planning/obstacle_avoidance_planner/src/: debug_marker.cpp  mpt_optimizer.cpp  node.cpp
planning/obstacle_avoidance_planner/src/vehicle_model/: vehicle_model_four_wheel_steering_kinematics.cpp
planning/route_handler/include/route_handler/: route_handler.hpp
planning/route_handler/src/: route_handler.cpp
planning/scenario_selector/include/scenario_selector/: scenario_selector_node.hpp
sensing/gnss_poser/config/: set_local_origin.param.yaml
simulator/simple_planning_simulator/: CMakeLists.txt
simulator/simple_planning_simulator/include/simple_planning_simulator/: simple_planning_simulator_core.hpp
simulator/simple_planning_simulator/param/: simple_planning_simulator_default.param.yaml
simulator/simple_planning_simulator/src/simple_planning_simulator/: simple_planning_simulator_core.cpp
vehicle/raw_vehicle_cmd_converter/data/default/: accel_map.csv  brake_map.csv
vehicle/raw_vehicle_cmd_converter/launch/: raw_vehicle_converter.launch.xml
(+14 files in other folders)
